# icetray-sim-services

./: .mailinglist  CMakeLists.txt  Makefile  RELEASE_NOTES  project-config.mk
private/process-root-files/: ProcessRootFiles.cxx
private/pybindings/: CMakeLists.txt  I3CascadeMCServiceBase.cxx  I3MCTree.cxx  I3PropagatorService.cxx  I3PropagatorServiceBase.cxx  module.cxx
private/sim-services/: I3CascadeMCServiceBase.cxx  I3CombineMCPE.cxx  I3CrossSection.cxx  I3DownsampleMCPE.cxx  I3GeoShifter.cxx  I3InIceCORSIKATrimmer.cxx  I3MCEventHeaderGenerator.cxx  I3MCPEtoI3MCHitConverter.cxx  I3MCTreeHybridSimulationSplitter.cxx  I3MCTreeUtils.cxx  I3ModifyEventID.cxx  I3ModifyStartTime.cxx  I3PhysicsTimer.cxx  I3PrimaryPulseMapper.cxx  I3PropagatorModule.cxx  I3PropagatorServiceBase.cxx  I3RemoveLargeDT.cxx  I3SumGenerator.cxx  MCPEMCPulseTools.cxx  PropagatorServiceUtils.cxx
private/test/: GeoShifter.cxx  I3DBTestModule.cxx  I3DBTestModule.h  I3GeoShiftTestModule.cxx  I3GeoShiftTestModule.h  I3SimSourceTestModule.cxx  I3SimSourceTestModule.h  I3TweakTriggerTestModule.cxx  I3TweakTriggerTestModule.h  MCSimSourceTest.cxx  PSTUtilityFunctions.cxx  PSTUtilityFunctions.h  PropagatorServiceUtilsTest.cxx  SortMCHitsTest.cxx  TweakTriggerTests.cxx
private/time-generator/: I3MCTimeGenerator.cxx
public/sim-services/: I3CascadeMCServiceBase.h  I3CrossSection.h  I3GeoShifter.h  I3MCTreeUtils.h  I3PhysicsTimer.h  I3PropagatorService.h  I3PropagatorServiceBase.h  I3SimConstants.h  I3SumGenerator.h  PropagatorServiceUtils.h
public/time-generator/: I3MCTimeGenerator.h
python/: bad_dom_list_static.py  propagation.py
python/gcd_validation/: hit_generator.py  pe_generator.py
python/python/: __init__.py  bad_dom_list_static.py
python/sanity_checker/: __init__.py  test_framework.py
python/sim_utils/: gcd_utils.py
python/test_modules/: exclude_doms_test_modules.py  tweak_trigger_test_module.py
python/weighting/: __init__.py  enum.py  fluxes.py  weighting.py
resources/docs/: code_review.rst  gcd_validation.rst  index.dox  index.rst  remove_large_dt.rst  sanity_checkers.rst  sim-source.dox  time-generator.dox
resources/gcd_validation/: correct_GCD.py  gcd_merge.py  gcd_setup.py  generate_IC86_stress_test_samples.py  generate_gcd.py  generate_gcd_snapshot.py  test_GCD.py  validate_stress_test_samples.py
resources/sanity_checker/: combine_and_generate_histos.py  combine_pickle_files.py  compare_histos.py  sanity_check.py
resources/scripts/: AddTriggerTest.py  ApplyPropagatorsToMCTree.py  BookDBHistograms.py  DumpDBAndFillSomeDefaults.py  DumpDBToI3File.py  SplitMCTreeForHybridSimulation.py  TriggerTweakTest.py  a_DumpDBToI3File.py  a_sanity_check.py  apply_propagators_to_mctree.py  b_BookDBHistograms.py  b_sanity_check.py  basic_histos.py  combine_and_generate_histos.py  compare_histos.py  correct_GCD.py  generate_IC79_stress_test_samples.py  generate_IC86_stress_test_samples.py  generate_plots.py  hist1d.py  hist2d.py  hist2d_stack.py  histmath.py  i3_basic_histos.py  plot_histos.py  print_nicknames.py  sanity_check.py  test_GCD.py  validate_stress_test_samples.py
resources/tables/: CABLEDELAY.README  DMADD_THRESHOLD_FILES.README  ama.elec.mc2005  nicknames.txt  puls.mc2002.alu.txt
resources/tests/: a_hist_test.py  all_your_tests_are_belong_to_us.py  compare_to_reference.py  hist_read.py  hist_test.py  nugen_full_chain.py  propagator_state_storage.py  register_tests.py  remove_large_dt_pes.py  sanity_checker_histogram_tests.py  sanity_checker_module_tests.py  sanity_checker_tests.py  test2.py  test_combine_PEs.py  test_gcd_utils.py  test_inice_corsika_trimmer.py  (+1 more)
(+119 files in other folders)
